--- a/C++.html
+++ b/C++.html
@@ -5,7 +5,29 @@
    <link href="project.css" rel="stylesheet" />
    </head>
    <body>
-   <h1>C++</h1>
+   <h1>C++</h1><ul>
+      <li><a href="C++.html">C++</a></li>
+	  <li><a href="PHP.html">PHP</a></li>
+	  <li><a href="Javascript.html">Javascript</a></li>
+	  <li><a href="SQL.html">SQL</a></li>
+	  <li><a href="LanguagesTable.html">Languages Table</a></li>
+   </ul>
+   <p>C++ was invented in 1979 by the Danish computer scientist Bjarne Stroustrup.
+   It was originally called “C with classes” because it extended and improved the 
+   C language to use classes before having its name simplified to “C++” to signify 
+   that it was incrementally better than C. C++ is an Object Oriented Programming 
+   (OOP) language that has been used in just about every scenario imaginable from 
+   desktop computers to servers to specialized software. As a compiled language for 
+   all platforms its speed and versatility make it highly useful in software development.
+   </p>
+   <h2>Code Example</h2>
+   <p>#include <iostream>
+
+int main()
+{
+    std::cout << "Hello, world!\n";
+}
+</p>
    <nav
    </body>
     </html>
