--- a/Javascript.html
+++ b/Javascript.html
@@ -6,5 +6,24 @@
    </head>
    <body>
    <h1> Javascript</h1>
+   <ul>
+      <li><a href="C++.html">C++</a></li>
+	  <li><a href="PHP.html">PHP</a></li>
+	  <li><a href="Javascript.html">Javascript</a></li>
+	  <li><a href="SQL.html">SQL</a></li>
+	  <li><a href="LanguagesTable.html">Languages Table</a></li>
+   </ul>
+   <p>JavaScript (or JS) is an interpreted language that was developed in 1995 by Netscape to add interactivity to static web pages.
+   It’s name is misleading as it only shares a similar C-style syntax with Java and is not actually a derivative of the Java language.
+   JavaScript remains an integral part of web browsers but has also been expanded to run on servers as NodeJS and on client devices 
+   through wrappers such as Electron.
+
+   </p>
+   <h2>Code Example</h2>
+   <p>
+   "<script>"
+    alert( 'Hello, world!' );
+	"</script>"
+</p>
    </body>
     </html>
