--- a/PHP.html
+++ b/PHP.html
@@ -5,6 +5,23 @@
    <link href="project.css" rel="stylesheet" />
    </head>
    <body>
-   <h1> PHP</h1>
+   <h1>PHP</h1>
+   <ul>
+      <li><a href="C++.html">C++</a></li>
+	  <li><a href="PHP.html">PHP</a></li>
+	  <li><a href="Javascript.html">Javascript</a></li>
+	  <li><a href="SQL.html">SQL</a></li>
+	  <li><a href="LanguagesTable.html">Languages Table</a></li>
+   </ul>
+   <p>    PHP was created in 1994 by the Danish programmer Rasmus Lerdorf as a server side language. 
+   It’s name is actually a recursive acronym “PHP: Hypertext Preprocessor”. It is used almost exclusively
+   on web servers due to its ability to help generate HTML documents and process form data from or into databases.
+   It is an interpreted language which makes it slower than some of its counterparts, but its widespread use has made
+   it an essential language to know.
+   </p>
+   <h2>Code Example</h2>
+   <p>
+   <?php echo '<p>Hello World</p>'; ?>
+   </p>
    </body>
     </html>
