--- a/SQL.html
+++ b/SQL.html
@@ -6,5 +6,27 @@
    </head>
    <body>
    <h1>SQL</h1>
+   <ul>
+      <li><a href="C++.html">C++</a></li>
+	  <li><a href="PHP.html">PHP</a></li>
+	  <li><a href="Javascript.html">Javascript</a></li>
+	  <li><a href="SQL.html">SQL</a></li>
+	  <li><a href="LanguagesTable.html">Languages Table</a></li>
+   </ul>
+   <p>SQL (Structured Query Language) is a programming language exclusively used in databases
+   that was developed in the 1970s at IBM. Unlike most other languages that are versatile and
+   can be used for multiple purposes, SQL is a specialized language that is used exclusively 
+   for manipulating data within databases. There is no outside use for the SQL language apart
+   from databases.
+
+   </p>
+   <h2>Code Example</h2>
+   <p>#include <iostream>
+
+int main()
+{
+    std::cout << "Hello, world!\n";
+}
+</p>
    </body>
    </html>
