Polished some code

--- a/Javascript.html
+++ b/Javascript.html
@@ -71,7 +71,13 @@
 <div id="editor">
 
 
-alert( 'Hello, world!' );
+// Create an object:
+var person = {
+    firstName : "John",
+    lastName  : "Doe",
+    age       : 50,
+    eyeColor  : "blue"
+};
 
 
 </div>
