--- a/summary.html
+++ b/summary.html
@@ -30,9 +30,9 @@
 					<li><a href="homepage.html">Home</a></li>
 					<li><a href="C++.html">C++</a></li>
 					<li><a href="PHP.html">PHP</a></li>
-					<li><a href="Javascript.html" class="active">JavaScript</a></li>
+					<li><a href="Javascript.html">JavaScript</a></li>
 					<li><a href="SQL.html">SQL</a></li>
-					<li><a href="summary.html">Summary</a></li>
+					<li><a href="summary.html" class="active">Summary</a></li>
 			   </ul>
 			</div>
 			
